homepage updated, posts page added, comments added but not working